updated with to prevent wrapping on sign in

--- a/grouppay/grouppay/static/stylesheets/home.css
+++ b/grouppay/grouppay/static/stylesheets/home.css
@@ -24,7 +24,7 @@
 
 .actions {
    margin: 0 auto;
-   width: 205px;
+   width: 210px;
 }
 
 .actions .btn {
